@@ -12,10 +12,10 @@ import org.junit.Test;
 import org.xml.sax.InputSource;
 import org.xml.sax.XMLReader;
 
-public class ImageMetadataHandlerTest
+public final class ImageMetadataHandlerTest
 {
     private ImageMetadataHandler imageMetadataHandler;
-    XMLReader reader;
+    private XMLReader reader;
 
     @Before
     public void setUp() throws Exception
@@ -39,9 +39,9 @@ public class ImageMetadataHandlerTest
         final ImgMetadataInfo imgMetadataInfo = imageMetadataHandler.getImgMetadataInfo();
         assertTrue(imgMetadataInfo != null);
         assertTrue(imgMetadataInfo.getDimUnit().equals("px"));
-        assertTrue(imgMetadataInfo.getDpi().equals(new Long(400)));
-        assertTrue(imgMetadataInfo.getHeight().equals(new Long(4400)));
-        assertTrue(imgMetadataInfo.getWidth().equals(new Long(3400)));
+        assertTrue(imgMetadataInfo.getDpi().equals(Long.valueOf(400)));
+        assertTrue(imgMetadataInfo.getHeight().equals(Long.valueOf(4400)));
+        assertTrue(imgMetadataInfo.getWidth().equals(Long.valueOf(3400)));
     }
 
     @Test
@@ -54,9 +54,9 @@ public class ImageMetadataHandlerTest
         final ImgMetadataInfo imgMetadataInfo = imageMetadataHandler.getImgMetadataInfo();
         assertTrue(imgMetadataInfo != null);
         assertTrue(imgMetadataInfo.getDimUnit().equals("px"));
-        assertTrue(imgMetadataInfo.getDpi().equals(new Long(400)));
-        assertTrue(imgMetadataInfo.getHeight().equals(new Long(4400)));
-        assertTrue(imgMetadataInfo.getWidth().equals(new Long(3400)));
+        assertTrue(imgMetadataInfo.getDpi().equals(Long.valueOf(400)));
+        assertTrue(imgMetadataInfo.getHeight().equals(Long.valueOf(4400)));
+        assertTrue(imgMetadataInfo.getWidth().equals(Long.valueOf(3400)));
     }
 
     @Test
@@ -83,9 +83,9 @@ public class ImageMetadataHandlerTest
         final ImgMetadataInfo imgMetadataInfo = imageMetadataHandler.getImgMetadataInfo();
         assertTrue(imgMetadataInfo != null);
         assertTrue(imgMetadataInfo.getDimUnit().equals("px"));
-        assertTrue(imgMetadataInfo.getDpi().equals(new Long(0)));
-        assertTrue(imgMetadataInfo.getHeight().equals(new Long(4400)));
-        assertTrue(imgMetadataInfo.getWidth().equals(new Long(3400)));
+        assertTrue(imgMetadataInfo.getDpi().equals(Long.valueOf(0)));
+        assertTrue(imgMetadataInfo.getHeight().equals(Long.valueOf(4400)));
+        assertTrue(imgMetadataInfo.getWidth().equals(Long.valueOf(3400)));
     }
 
     @Test
